# tinygraphparser

./: README.md  SETUP.md  pyproject.toml
analysis/: opSupportMap.csv
examples/: main.py
lensrt/: __init__.py  api.py  graph_parser.py  partition_simulator.py  runtime_analyser.py
tinygraphparser/: __init__.py  graph_parser.py  partition_simulator.py
