[project]
name = "tinygraphparser"
version = "0.1.0"
description = "Inspect TFLite / LiteRT-LM graphs and predict QNN partitioning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tflite>=2.18.0",
    "flatbuffers>=25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tinygraphparser"]
