[project]
name = "lensrt"
version = "0.1.0"
description = "Static and runtime TFLite graph analyzer for QNN partition diagnostics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tflite>=2.18.0",
    "flatbuffers>=25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lensrt"]

[dependency-groups]
dev = [
    "black>=26.5.0",
]
